# distributed-kv

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: http_server_main.cpp  network_node_main.cpp  single_process_main.cpp
bench/: run_network_bench.sh  wrk_get.lua  wrk_put.lua
docs/: README.md  architecture.md  consistency-defense-playbook.md  failure-drill-runbook.md  implementation_notes.md  interview-qna-complete.md  interview_guide.md  performance.md  production-hardening-roadmap.md  project-study-guide-complete.md  source-code-walkthrough-complete.md  面试问题完整回答.md
include/core/: cluster.h  raft_node.h  raft_persistence.h  raft_transport.h  raft_types.h
include/network/: http_message.h  http_server.h  libuv_http_server.h  network_codec.h  network_transport.h  node_http_server.h  raft_rpc_server.h  task_executor.h  tcp_util.h
include/storage/: key_value_store.h
protos/: raft_rpc.proto
scripts/: demo_local_cluster.sh  run_local_cluster.sh  verify_local_cluster.sh  verify_network_e2e.sh
src/core/: cluster.cpp  raft_node.cpp  raft_persistence.cpp
src/network/: http_server.cpp  libuv_http_server.cpp  network_codec.cpp  network_transport.cpp  node_http_server.cpp  raft_rpc_server.cpp  task_executor.cpp  tcp_util.cpp
src/storage/: key_value_store.cpp
tests/unit/: raft_async_replication_test.cpp  raft_conflict_test.cpp  raft_linearizable_read_test.cpp  raft_lock_test.cpp  raft_membership_test.cpp  raft_mvcc_test.cpp  raft_persistence_test.cpp  raft_prevote_test.cpp  raft_smoke_test.cpp  raft_snapshot_test.cpp  tcp_util_timeout_test.cpp
